# msoffice-shared-rs

./: Cargo.toml
src/: xml.rs
src/drawingml/: audiovideo.rs  colors.rs  core.rs  shapedefs.rs  shapeprops.rs
src/drawingml/text/: bodyformatting.rs  bullet.rs  paragraphs.rs  runformatting.rs
