[package]
name = "msoffice_shared"
version = "0.1.1"
authors = ["Kalmár Róbert <rfrostkalmar@gmail.com>"]
edition = "2018"
description = "Library shared by other MS OpenOffice file format libraries"
keywords = ["office", "pptx", "ppt", "word", "spreadsheet"]
license = "MIT"
repository = "https://github.com/dam4rus/msoffice-shared-rs.git"
homepage = "https://github.com/dam4rus/msoffice-shared-rs"
readme = "README.md"
exclude = [
    "tests/presentation.xml",
]

[dependencies]
quick-xml = "^0.31"
zip = "^0.6"
log = "^0.4"
strum = "^0.26"
strum_macros = "^0.26"
regex = "^1.10"

[dev-dependencies]
simple_logger = "^4.3"
